--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,128 @@
     --btn-article: #ffd966;
     --btn-aside: #93c47d;
     --link: #467ead;
+    --border-black: black;
+}
+*{
+    font-family: cursive;
+}
+.strong-bold {
+    font-weight: bold;
+}
+.btn {
+    text-align: center;
+    border: 2px solid  var(--border-black);
+    box-shadow: 2px 2px;
+    padding: 0.3rem;
+}
+.btn:hover {
+    cursor: pointer;
+}
+.link-deco {
+    text-decoration: underline;
+    color: var(--link);
+}
+.link-deco:hover {
+    cursor: pointer;
 }
 .header {
+    margin: 0 auto; /*Centrar*/
+}
+.header-content{
+    display: flex;  
+    background-color: var(--header-background);
+    justify-content: space-around;
+    align-items: center;
+}
+.header-search-input {
+    border: 2px solid  var(--border-black);
+}
+.header-login-button {
+    background-color: var(--btn-login);
+    padding: 5px 20px;
+}
+.body {
     display: grid;
     justify-items: center;
 }
-.header-content {
+.content {
     display: flex;
-    justify-content: space-around;
+    margin-top: 20px;
+    gap: 1rem;
+}
+.content-nav {
+    display: none;
+}
+.main {
+    flex: 1 1 max-content;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.main-article {
+    display: flex;
+    border: 2px solid  var(--border-black);
     align-items: center;
-    width: 90%;
-    background-color: var(--header-background);
+    justify-content: space-evenly;
+    padding: 0 1rem;
+}
+.main-article h2,
+.main-article h3,
+.main-article hp  {
+    margin: 0px;
+    padding: 10px;
+}
+.article-btn {
+    background-color: var(--btn-article);
+    padding: 4px 10px;
+    margin-bottom: 10px;
+}
+.article-plural {
+    font-style: italic;
+}
+.content-aside {
+    flex: 0.5 1 min-content;
+}
+.aside {
+    border: 2px solid  var(--border-black);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+.aside-btn-color {
+    width: 200px;
+    padding: 10px 20px;
+    background-color: var(--btn-aside);
+}
+@media (max-width: 480px) {
+    .header-content {
+        margin-bottom: 0;
+        & .header-search {
+            display: none;
+        }
+        & .header-login {
+            display: none;
+        }
+    }
+    .content {
+        display: flex;
+        margin-top: 0px;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .content-nav {
+        display: block;
+        width: 94%;
+        padding: 10px;
+        margin: 0 0px;
+    }
+}
+
+@media (max-width: 880px) {
+    .content {
+        margin: 20px;
+        padding: 1px;
+        gap: 10px;
+    }
 }
